# HDRTray

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GitVersionDetect.cmake  HDR.cpp  HDR.h  HDRCmd.cpp  HDRCmd.md  HDRCmd.rc  HDRTray.cpp  HDRTray.h  HDRTray.manifest  HDRTray.rc  NotifyIcon.cpp  NotifyIcon.hpp  README.md  Resource.h  WinVerCheck.hpp  cmake.yml  framework.h  index.md  packages.config  version.rc.in
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
HDRCmd/: CMakeLists.txt  HDRCmd.cpp  HDRCmd.manifest  Subcommands.cpp  Subcommands.hpp  version.h.in  version.rc.in
HDRCmd/subcommand/: Base.hpp  Disable.cpp  Disable.hpp  DisplayUsing.cpp  DisplayUsing.hpp  Enable.cpp  Enable.hpp  LoginStartup.cpp  LoginStartup.hpp  Select.cpp  Select.hpp  Status.cpp  Status.hpp  display_name.hpp  display_status.cpp  display_status.hpp  resolve_display.cpp  resolve_display.hpp
HDRTray/: CMakeLists.txt  DisplayConfigWatcher.cpp  DisplayConfigWatcher.hpp  HDRTray.cpp  HDRTray.rc  NotifyIcon.cpp  NotifyIcon.hpp  Resource.h  version.rc.in
HDRTray/icons/: create-app-icon.sh  create-tray-icons.sh
HDRTrayConfig/: AboutPage.idl  AboutPage.xaml  AboutPage.xaml.cpp  AboutPage.xaml.h  App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  HDRDisplay.cpp  HDRDisplay.h  HDRDisplay.idl  HDRPage.idl  HDRPage.xaml  HDRPage.xaml.cpp  HDRPage.xaml.h  HDRTrayConfig.rc  HDRViewModel.cpp  HDRViewModel.h  HDRViewModel.idl  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  MddBootstrapAutoInitializer.cpp  NotifyingPropertyImpl.hpp  Resource.h  SettingsPage.idl  SettingsPage.xaml  SettingsPage.xaml.cpp  SettingsPage.xaml.h  SettingsViewModel.cpp  SettingsViewModel.h  SettingsViewModel.idl  ToggleCard.idl  ToggleCard.xaml  ToggleCard.xaml.cpp  ToggleCard.xaml.h  app.manifest  pch.h  version.rc.in
common/: CMakeLists.txt  DisplayConfig.cpp  DisplayConfig.hpp  DisplayConfigWatcher.cpp  DisplayConfigWatcher.hpp  HDR.cpp  HDR.h  LoginStartupConfig.cpp  LoginStartupConfig.hpp  LoginStartupConfigWatcher.cpp  LoginStartupConfigWatcher.hpp  RegistryKey.hpp  RegistryWatcher.cpp  RegistryWatcher.hpp  WinVerCheck.hpp  l10n.cpp  l10n.h  resource_common.h  targetver.h  version.h.in
ext/: CMakeLists.txt
hdr/: CMakeLists.txt  HDR.cpp  HDR.h
icons/: create-icons.sh
